# gerador-oficios

./: .gitignore  README.md  TODO.md  gerador.py  index.html  package-lock.json  package.json  todo.md  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: TODO.md  dependency-audit.md  development.md  excel.md  new-module.md  qa-checklist.md  release-v1.0.0.md  template.md  templates.md
gerador-oficios/: index.html
gerador-oficios/src/: App.tsx  styles.css  types.ts
gerador-oficios/src-tauri/: Cargo.toml
gerador-oficios/src-tauri/resources/templates/achados-e-perdidos/: template.docx
gerador-oficios/src/components/: Field.tsx
gerador-oficios/src/pages/: DraftsPage.tsx  HelpPage.tsx  LostFoundPage.tsx  SettingsPage.tsx
gerador-oficios/src/services/: tauri.ts
scripts/: smoke-browser.mjs
src/: main.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: context.ts  logger.ts  messages.ts  routes.ts  state.ts
src/components/: AppShell.tsx  EmptyState.tsx  IconButton.tsx
src/config/: defaults.ts
src/modules/: contract.ts  registry.test.ts  registry.ts
src/modules/lost-found/: fixtures.ts  format.test.ts  format.ts  module.ts
src/pages/: GeneratorsPage.tsx  drafts.ts  drafts.tsx  generator-shell.ts  generator-shell.tsx  generators.ts  generators.tsx  help.ts  help.tsx  lost-found.ts  lost-found.tsx  settings.ts  settings.tsx
src/services/: tauri.ts
src/styles/: app.css
src/ui/: components.ts  components.tsx  dom.ts  icons.ts  icons.tsx  timing.ts
(+2 files in other folders)
