[package]
name = "gerador-oficios"
version = "0.1.0"
description = "Gerador modular de ofícios BRT"
authors = ["BRT Sorocaba"]
edition = "2021"

[lib]
name = "gerador_oficios_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
calamine = "0.35"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
umya-spreadsheet = "2.3"
uuid = { version = "1", features = ["v4", "serde"] }
zip = "0.6"
